--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
     "dev": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
     "knex:migrate": "knex --knexfile dist/knexfile.js migrate:latest",
     "knex:rollback": "knex --knexfile dist/knexfile.js migrate:rollback",
+    "knex:seed": "knex --knexfile dist/knexfile.js seed:run",
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "@types/jsonwebtoken": "^8.5.0",
     "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
     "pg": "^8.5.1"
   }
